Added bat and jar files as a handy way to run the program. Edited README. Refactored project into folders. Makes it easier for a user to navigate the files.