@@ -1,18 +1,12 @@
 # HothProject
 Agile software project management:
 
-How To run: 
-Download the Project and open it in Intellij.
-We have JavaFX in files in side the project so you only need to fix Application options for the Class Controller.Learno. 
+How to run :
+To run the program, simply run the bat file Learno.bat
 
-We need to add a VM option: --module-path (insert personal Path to the Fx Lib) --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media
+Note that you need to be running windows and have Java installed on your computer.
 
-Example:--module-path C:\Users\ORanh\OneDrive\Desktop\javafx-sdk-19\lib --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media
-
-Then you should be able to run the program.
-
-
-These Are the links to everthing that we have used during the corse:
+These Are the links to everthing that we have used during the course:
 
 MOCKUP FIGMA DESIGN:
 https://www.figma.com/file/EzX2V2YRR4EY0gK3YTSd4g/Agil-projekt?node-id=0%3A1
